[package]
name = "hyper_microservice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slab = "0.4"
futures = "0.3.21"
hyper = {version = "0.14.17", features=["full"]}
lazy_static = "1.0"
regex = "1.0"
rand = "0.8.5"
log = "0.4"
pretty_env_logger = "0.4"
dotenv = "0.15"
tokio = {version = "1.17.0", features=["full"]}
clap = {version = "3.1.5", features=["cargo"]}
serde = "1"
serde_derive = "1"
toml = "0.5.8"